--- a/app/src/main/res/layout/activity_tarefas2.xml
+++ b/app/src/main/res/layout/activity_tarefas2.xml
@@ -8,7 +8,7 @@
     tools:context=".activity_tarefas">
 
     <TextView
-        android:id="@+id/textView"
+        android:id="@+id/textView5"
         android:layout_width="355dp"
         android:layout_height="485dp"
         android:layout_marginStart="28dp"
@@ -34,7 +34,7 @@
         android:id="@+id/textView4"
         android:layout_width="44dp"
         android:layout_height="50dp"
-        android:text="@+id/Feito"
+        android:text="@+id/Feito2"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
