--- a/app/src/main/res/layout/activity_tarefas2.xml
+++ b/app/src/main/res/layout/activity_tarefas2.xml
@@ -30,15 +30,15 @@
         tools:layout_editor_absoluteX="16dp"
         tools:layout_editor_absoluteY="29dp" />
 
-    <TextView
-        android:id="@+id/textView4"
-        android:layout_width="44dp"
-        android:layout_height="50dp"
-        android:text="@+id/Feito2"
+    <ImageView
+        android:id="@+id/imageView"
+        android:layout_width="161dp"
+        android:layout_height="135dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView" />
+        app:layout_constraintTop_toBottomOf="@+id/textView5"
+        app:srcCompat="@drawable/errado" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
